--- a/pages/about.html
+++ b/pages/about.html
@@ -14,7 +14,7 @@ titlename: 关于
 <p style=font-size:18px>我们也许在很多地方扮演不同的角色去适应环境，但在这里，一切都由自己控制。转眼间即将进入自己学生生涯的倒数第二年，未来的日子里，希望在这里写下一些自己的思考和感悟。如果可以的话，创造一些美好的事物。话说回来，一个人天天折腾不就是为了一个温暖怀抱吗。</p>
 
 <center>
-  <img src="http://7xnlfe.com1.z0.glb.clouddn.com/smile.jpeg" style="width:100%">
+  <img src="http://7xnlfe.com1.z0.glb.clouddn.com/atRiver.jpeg" style="width:100%">
 </center>
 
 
