--- a/index.html
+++ b/index.html
@@ -7,18 +7,19 @@ titlename: 首页
 <div>
   <h1 style="text-align:center">Live Once,Once Forever</h1>
   <p>你好，陌生人，欢迎来到我的世界 : )<br>
+    在这里，你可以了解到关于我的一切。
   <p>
 
   <h3>我是谁</h3>
-  <p>宋鑫，生于1989年，家乡是湖北武汉，目前居住于深圳。<br>
+  <p>我是宋鑫，生于1989，家乡湖北武汉，目前居住于深圳。<br>
     我是一名程序员，投机客，写作者，设计师。<br>
     热爱思考，看书，爱好旅游，摄影，游泳。<br>
   </p>
   <h3>我的项目</h3>
   <ul>
-    <li><a href="https://github.com/songxin1990/notes">我的笔记</a></li>
-    <li><a href="https://github.com/songxin1990">我的开源项目</a></li>
-    <li id="wechat">我的微信公众号：songxin0618</li>
+    <li><a href="https://github.com/songxin1990/notes">笔记</a></li>
+    <li><a href="https://github.com/songxin1990">开源项目</a></li>
+    <li id="wechat">微信公众号：songxin0618</li>
   </ul>
 
   <h3>联系我</h3>
