--- a/pages/archive.html
+++ b/pages/archive.html
@@ -16,7 +16,7 @@ comments: false
       <ul>
     {% endif %}
     <li><!--<span>{{ post.date | date: "%Y-%m-%d" }}</span> &raquo;-->
-      <a class="pjaxlink" href="{{ post.url }}">{{ post.title }}</a>
+      <a class="pjaxlink" href="{{ post.url }}">{{ post.title }}</a>l
     </li>
   
     {% if forloop.last %}
