--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@ titlename: 首页
   <ul>
     <li><a href="https://github.com/songxin1990/notes">笔记</a></li>
     <li><a href="https://github.com/songxin1990">开源项目</a></li>
-    <li id="wechat">微信公众号：songxin0618</li>
+    <li id="wechat">公众号：songxin0618</li>
+    <li><a href="/pages/resume.html">简历</a></li>
   </ul>
 
   <h3>联系我</h3>
