--- a/pages/product.html
+++ b/pages/product.html
@@ -1,15 +1,15 @@
 ---
 layout: page_title
 title: <i class="fa fa-archive fa-lg"></i>
-titlename: 德州扑克
+titlename: 产品
 comments: false
 ---
 
-<!-- 德州扑克-->
-<h2 id="#porker">{{ site.locals.porker }}</h2>
+<!-- 产品-->
+<h2 id="#product">产品</h2>
 <ul>
     {% for post in site.posts %}
-    {% if post.category contains "porker" %}
+    {% if post.category contains "product" %}
     <li>
         <h3>
             <a class="pjaxlink" href="{{ post.url }}">{{ post.title }}</a>
