--- a/index.html
+++ b/index.html
@@ -6,24 +6,45 @@ titlename: 首页
 
 <div>
   <h1 style="text-align:center">Live Once,Once Forever</h1>
+
   <p>你好，陌生人，欢迎来到我的世界 : )<br>
     在这里，你可以了解到关于我的一切。
   <p>
 
   <h3>我是谁</h3>
-  <p>我是宋鑫，生于1989，家乡湖北武汉，目前居住于深圳。<br>
-    我是一名程序员，投机客，写作者，设计师。<br>
-    热爱思考，看书，爱好旅游，摄影，游泳。<br>
+  <p>我是宋鑫，生于1989。家乡湖北武汉，目前居住于深圳宝安。<br>
+    作为一名程序员，投机客，写作者，设计师。<br>
+    我热爱思考，看书，爱好旅游，摄影，游泳。<br>
   </p>
+
   <h3>我的项目</h3>
   <ul>
     <li><a href="https://github.com/songxin1990/notes">笔记</a></li>
     <li><a href="https://github.com/songxin1990">开源项目</a></li>
     <li id="wechat">公众号：songxin0618</li>
-    <li><a href="/pages/resume.html">简历</a></li>
+    <li><a href="/resume.html">简历</a></li>
   </ul>
 
+  <h3>最新动态</h3>
+  <p>
+    最近在学习和制作爬虫方面的产品，准备将500px.com上面的所有摄影作品全部，<br>
+    一次性的爬取下来，然后本地观看。很多优秀的作品，并不会一定会得到曝光。<br>
+    <br>
+    最近在读《The Unix Programming Environment》，学习Linux。<br>
+    <br>
+    <a href="/state.html">更多个人动态</a>
+  </p>
+
+  <h3>关于本站</h3>
+  <p>
+    在互联网的汪洋大海之中，给自己建造一座灯塔。<br>
+    期望以自我的思想给遨游，迷失于虚拟世界的人们以指引，亦或仅仅成为旅行者沿途中的一道亮丽风景。<br>
+    但是我知道自己还做的远远不够，因此用此站来记录我的一切。<br>
+
+  </p>
+
   <h3>联系我</h3>
+  <ul class="list-inline">
   <li>Github:
     <a href="{{ site.author.github }}" target="_blank">
       <i class="fa fa-github fa-lg" style="color:#16a095;"></i>
@@ -36,7 +57,7 @@ titlename: 首页
   </li>
   <li>ZhiHu:
     <a href="{{ site.author.zhihu }}">
-      <img src="public/img/zhihu.svg" width="15.99px" height="19.2px">
+      <img src="fa fa-star fa-lg" width="15.99px" height="19.2px">
     </a>
   </li>
   <li>Email:
@@ -49,7 +70,7 @@ titlename: 首页
       <i class="fa fa-rss fa-lg" style="color:#16a095;"></i>
     </a>
   </li>
-
+  </ul>
 </div>
 
 {% for tag in site.tags %}
@@ -78,6 +99,7 @@ titlename: 首页
 -->
 
 <div class="row">
+  <!--遍历最新文章-->
   <div class="col-md-12">
     <div class="panel panel-primary">
       <div class="panel-heading">{{ site.locals.newest }}</div>
@@ -89,6 +111,8 @@ titlename: 首页
       {% endfor %}
     </div>
   </div>
+
+  <!--遍历cate中的文章-->
   {% for cate in site.cates %}
   <div class="col-md-12">
     <div class="panel panel-primary">
@@ -106,5 +130,6 @@ titlename: 首页
     </div>
   </div>
   {% endfor %}
+
 </div>
  
