--- a/pages/essence.html
+++ b/pages/essence.html
@@ -1,15 +1,15 @@
 ---
 layout: page_title
 title: <i class="fa fa-archive fa-lg"></i>
-titlename: 其他
+titlename: 精华
 comments: false
 ---
 
-<!-- 其他下分：无法分类的，或者文章还不够多的，暂时放在这里 -->
-<h3 id="#others">{{ site.locals.others }}</h3>
+<!-- 精华文章 -->
+<h3 id="#essence">{{ site.locals.essence }}</h3>
 <ul>
     {% for post in site.posts %}
-    {% if post.category contains "others" %}
+    {% if post.category contains "essence" %}
     <li>
         <h4>
             <a class="pjaxlink" href="{{ post.url }}">{{ post.title }}</a>
