修改目录结构；调整atom

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ titlename: 首页
   </p>
 
   <h3>联系我</h3>
-  <ul>
+  <ul class="list-inline">
   <li>
     <a href="{{ site.author.github }}" target="_blank">
       <i class="fa fa-github fa-lg" style="color:#16a095;"></i>
