--- a/pages/trash.html
+++ b/pages/trash.html
@@ -7,7 +7,7 @@ comments: false
 
 <h2>曾经，我写的东西也很烂</h2>
 <!-- 废纸篓，自认为对我无用的文章 -->
-<h3 id="#trash">{{ site.locals.trash }}</h3>
+<!--<h3 id="#trash">{{ site.locals.trash }}</h3>-->
 <ul>
     {% for post in site.posts %}
     {% if post.category contains "trash" %}
