--- a/pages/creation.html
+++ b/pages/creation.html
@@ -5,7 +5,35 @@ titlename: 交易
 comments: false
 ---
 
-<!-- 写作下分：诗词，散文，小说，-->
+<!-- 散文-->
+<h3 id="#essay">{{ site.locals.essay }}</h3>
+<ul>
+    {% for post in site.posts %}
+    {% if post.category contains "essay" %}
+    <li>
+        <h4>
+            <a class="pjaxlink" href="{{ post.url }}">{{ post.title }}</a>
+        </h4>
+    </li>
+    {% endif %}
+    {% endfor %}
+</ul>
+
+<!--诗歌-->
+<h3 id="#poem">我喜欢的{{ site.locals.poem }}</h3>
+<ul>
+    {% for post in site.posts %}
+    {% if post.category contains "poem" %}
+    <li>
+        <h4>
+            <a class="pjaxlink" href="{{ post.url }}">{{ post.title }}</a>
+        </h4>
+    </li>
+    {% endif %}
+    {% endfor %}
+</ul>
+
+<!--读书-->
 <h3 id="#book">{{ site.locals.book }}</h3>
 <ul>
     {% for post in site.posts %}
@@ -19,10 +47,11 @@ comments: false
     {% endfor %}
 </ul>
 
-<h3 id="#duhougan">{{ site.locals.duhougan }}</h3>
+<!--读后感-->
+<!--<h3 id="#review ">{{ site.locals.review  }}</h3>
 <ul>
     {% for post in site.posts %}
-    {% if post.category contains "sanwen" %}
+    {% if post.category contains "review" %}
     <li>
         <h4>
             <a class="pjaxlink" href="{{ post.url }}">{{ post.title }}</a>
@@ -30,6 +59,6 @@ comments: false
     </li>
     {% endif %}
     {% endfor %}
-</ul>
+</ul>-->
 
 
