修改邮箱，修改google搜索技巧

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@ titlename: 首页
 
   <h3>关于本站</h3>
   <p>
+    本站的定位在：将我成长过程中所学习到的东西展现给大家，希望对你们有价值。<br>
     在互联网的汪洋大海之中，给自己建造一座灯塔。<br>
     期望以自我的思想给遨游，迷失于虚拟世界的人们以指引，亦或仅仅成为旅行者沿途中的一道亮丽风景。<br>
     但是我知道自己还做的远远不够，因此用此站来记录我的一切。<br>
@@ -50,11 +51,11 @@ titlename: 首页
       <i class="fa fa-github fa-lg" style="color:#16a095;"></i>
     </a>
   </li>
-  <li>
+<!--  <li>
     <a href="{{ site.author.linkedin }}">
       <i class="fa fa-linkedin fa-lg" style="color:#16a095;"></i>
     </a>
-  </li>
+  </li>-->
   <!--<li>
     <a href="{{ site.author.zhihu }}">
       <img src="fa fa-star fa-lg" width="15.99px" height="19.2px">
