--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@ titlename: 首页
 
   </p>
 
+
+  <h3>真相</h3>
+  <img class=".img-circle" src="/public/img/me.jpg" alt="That's me">
   <h3>联系我</h3>
   <ul class="list-inline">
   <li>
