--- a/index.html
+++ b/index.html
@@ -12,36 +12,31 @@ titlename: 首页
   <p>
 
   <h3>我是谁</h3>
-  <p>我是宋鑫，生于1989。家乡湖北武汉，目前居住于深圳宝安。<br>
-    作为一名程序员，投机客，写作者，设计师。<br>
-    我热爱思考，看书，爱好旅游，摄影，游泳。<br>
+  <p>我是宋鑫，出生于1989年，家乡是湖北武汉，目前和家人居住在深圳。<br>
+    作为一名程序员，我热爱思考，看书，听音乐，爱好旅游，摄影，游泳。<br>
   </p>
 
   <h3>我的项目</h3>
   <ul>
     <li><a href="https://github.com/songxin1990/notes">笔记</a></li>
     <li><a href="https://github.com/songxin1990">开源项目</a></li>
-    <li id="wechat">公众号：songxin0618</li>
+   <!-- <li id="wechat">公众号：songxin0618</li>-->
     <li><a href="/resume.html">简历</a></li>
   </ul>
 
-  <h3>最新动态</h3>
+  <h3><a href="/state.html">最新动态</a></h3>
   <p>
-    最近在学习和制作爬虫方面的产品，准备将500px.com上面的所有摄影作品全部，<br>
-    一次性的爬取下来，然后本地观看。很多优秀的作品，并不会一定会得到曝光。<br>
-    <br>
-    最近在读《The Unix Programming Environment》，学习Linux。<br>
-    <br>
-    <a href="/state.html">更多个人动态</a>
+    最近在看CSAPP，努力学习操作系统方面的知识，偿还大学期间的债务。
   </p>
 
   <h3>关于本站</h3>
   <p>
-    本站的定位在：将我成长过程中所学习到的东西展现给大家，希望对你们有价值。<br>
-    在互联网的汪洋大海之中，给自己建造一座灯塔。<br>
-    期望以自我的思想给遨游，迷失于虚拟世界的人们以指引，亦或仅仅成为旅行者沿途中的一道亮丽风景。<br>
-    但是我知道自己还做的远远不够，因此用此站来记录我的一切。<br>
-
+    我发现将成长过程中所学习到的东西分享给他人，会让自身理解的更加深刻，而且还能给他人带去价值。<br>
+    <b>仅仅只是思考是不够的。</b> <br>
+    更多的去行动，去改变自己，影响社会才会有意义。<br>
+    <br>
+    写作能够极大的扩展思考的外延和思考的深度，写作创造的价值和影响力也是非常可观的。<br>
+    另一方面此站可以记录自身的成长，回头看看过去自己曾经的想法，写过的文章，会非常欣慰，自豪。<br>
   </p>
 
 
