--- a/index.html
+++ b/index.html
@@ -49,11 +49,16 @@ titlename: 首页
       <i class="fa fa-github fa-lg" style="color:#16a095;"></i>
     </a>
   </li>
-<!--  <li>
+  <li>
+    <a href="{{ site.author.stackoverflow }}">
+      <i class="fa fa-stack-overflow fa-lg" style="color:#16a095;"></i>
+    </a>
+  </li>
+  <li>
     <a href="{{ site.author.linkedin }}">
       <i class="fa fa-linkedin fa-lg" style="color:#16a095;"></i>
     </a>
-  </li>-->
+  </li>
   <!--<li>
     <a href="{{ site.author.zhihu }}">
       <img src="fa fa-star fa-lg" width="15.99px" height="19.2px">
