add kafka connect posts;

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@ titlename: 首页
     <li><a href="https://github.com/songxin1990/notes">笔记</a></li>
     <li><a href="https://github.com/songxin1990">开源项目</a></li>
    <!-- <li id="wechat">公众号：songxin0618</li>-->
-    <li><a href="/resume.html">简历</a></li>
+    <li><a href="/pages/resume.html">简历</a></li>
   </ul>
 
-  <h3><a href="/state.html">最新动态</a></h3>
+  <h3><a href="/pages/state.html">最新动态</a></h3>
   <p>
     最近在看CSAPP，努力学习操作系统方面的知识，偿还大学期间的债务。
   </p>
@@ -40,8 +40,8 @@ titlename: 首页
   </p>
 
 
-  <h3>真相</h3>
-  <img class=".img-circle" src="/public/img/me.jpg" alt="That's me">
+<!--  <h3>真相</h3>
+  <img class=".img-circle" src="/public/img/me.jpg" alt="That's me">-->
   <h3>联系我</h3>
   <ul class="list-inline">
   <li>
