--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 layout: page_title
 title: <i class="fa fa-home fa-lg"></i>
 titlename: 首页
+description: 研究互联网开发技术，记录分享成长所得，投机悟道提升思想境界
 ---
 
 <div>
@@ -47,11 +48,6 @@ titlename: 首页
   <li>
     <a href="{{ site.author.github }}" target="_blank">
       <i class="fa fa-github fa-lg" style="color:#16a095;"></i>
-    </a>
-  </li>
-  <li>
-    <a href="{{ site.author.stackoverflow }}">
-      <i class="fa fa-stack-overflow fa-lg" style="color:#16a095;"></i>
     </a>
   </li>
   <li>
