modify kafka blog;

--- a/pages/about.html
+++ b/pages/about.html
@@ -14,13 +14,13 @@ description: 关于宋鑫的其人其事
   <p>
 
   <h3>关于我</h3>
-  <p>我是宋鑫，出生于1989年，家乡是湖北武汉，目前和家人居住在深圳。<br>
+  <p>宋鑫，生于1989，家乡湖北武汉，目前和家人居住在深圳。<br>
     作为一名程序员，我热爱思考，看书，听音乐，爱好旅游，摄影，游泳。<br>
   </p>
 
 
   <h3>真相</h3>
-  <img class=".img-circle" src="/public/img/me.jpg" alt="That's me">
+  <img class=".img-circle" src="/public/img/me.jpg" alt="Song Xin' Photo">
 
   <h3>关于我的项目</h3>
   <ul>
@@ -56,16 +56,32 @@ description: 关于宋鑫的其人其事
       <i class="fa fa-github fa-lg" style="color:#16a095;"></i>
     </a>
   </li>
+    <li>
+      <a href="{{ site.author.googleplus }}" target="_blank">
+        <i class="fa fa-google-plus fa-lg" style="color:#16a095;"></i>
+      </a>
+    </li>
+    <li>
+      <a href="{{ site.author.facebook }}" target="_blank">
+        <i class="fa fa-facebook fa-lg" style="color:#16a095;"></i>
+      </a>
+    </li>
+    <li>
+      <a href="{{ site.author.twitter }}" target="_blank">
+        <i class="fa fa-twitter fa-lg" style="color:#16a095;"></i>
+      </a>
+    </li>
+
   <li>
     <a href="{{ site.author.linkedin }}">
       <i class="fa fa-linkedin fa-lg" style="color:#16a095;"></i>
     </a>
   </li>
-  <!--<li>
-    <a href="{{ site.author.zhihu }}">
-      <img src="fa fa-star fa-lg" width="15.99px" height="19.2px">
-    </a>
-  </li>-->
+    <li>
+      <a href="{{ site.author.zhihu }}">
+        知乎
+      </a>
+    </li>
   <li>
     <a href="mailto:{{ site.author.email }}">
       <i class="fa fa-envelope-o fa-lg" style="color:#16a095;"></i>
