--- a/pages/trade.html
+++ b/pages/trade.html
@@ -46,3 +46,17 @@ comments: false
     {% endif %}
     {% endfor %}
 </ul>
+
+<!-- 德州扑克-->
+<h3 id="#porker">{{ site.locals.porker }}</h3>
+<ul>
+    {% for post in site.posts %}
+    {% if post.category contains "porker" %}
+    <li>
+        <h4>
+            <a class="pjaxlink" href="{{ post.url }}">{{ post.title }}</a>
+        </h4>
+    </li>
+    {% endif %}
+    {% endfor %}
+</ul>
