--- a/pages/life.html
+++ b/pages/life.html
@@ -3,8 +3,11 @@ layout: page_title
 title: <i class="fa fa-archive fa-lg"></i>
 titlename: 生活
 comments: false
+description: 每个人都有属于他自己的生活
 ---
 
+<h2>每个人都有属于他自己的生活</h2>
+<hr>
 <!-- 生活下分：生活禅，感悟，生活梦想，-->
 <h3 id="#zen">{{ site.locals.zen }}</h3>
 <ul>
