--- a/pages/technology.html
+++ b/pages/technology.html
@@ -3,11 +3,14 @@ layout: page_title
 title: <i class="fa fa-archive fa-lg"></i>
 titlename: 技术
 comments: false
+description: 研究互联网开发技术
 ---
 
 <!--
 技术下分：大数据，基础，开源，工具，并发，
 -->
+<h2>研究互联网开发技术</h2>
+<hr>
 <h3 id="#opensource">{{ site.locals.opensource }}</h3>
 <ul>
     {% for post in site.posts %}
