--- a/pages/trade.html
+++ b/pages/trade.html
@@ -3,11 +3,14 @@ layout: page_title
 title: <i class="fa fa-archive fa-lg"></i>
 titlename: 交易
 comments: false
+description: 投机悟道提升思想境界
 ---
 
 <!--
 交易下分：股票，期货，交易系统，
 -->
+<h2>投机悟道提升思想境界</h2>
+<hr>
 <h3 id="#stock">{{ site.locals.stock }}</h3>
 <ul>
     {% for post in site.posts %}
