--- a/pages/archive.html
+++ b/pages/archive.html
@@ -3,8 +3,11 @@ layout: page_title
 title: <i class="fa fa-archive fa-lg"></i>
 titlename: 归档
 comments: false
+description: 任何事物都需要归纳总结，浓缩为精华
 ---
 
+<h2>任何事物都需要归纳总结，浓缩为精华</h2>
+<hr>
 {% for post in site.posts  %}
     {% capture this_year %}{{ post.date | date: "%Y" }}{% endcapture %}
     {% capture this_month %}{{ post.date | date: "%m" }}{% endcapture %}
