--- a/pages/trash.html
+++ b/pages/trash.html
@@ -3,12 +3,13 @@ layout: page_title
 title: <i class="fa fa-archive fa-lg"></i>
 titlename: 废弃
 comments: false
+description: 曾经，我写的东西也很烂。虽然，现在写的也不怎么好
 ---
 
-<h2>曾经，我写的东西也很烂</h2>
+<h2>曾经，我写的东西也很烂。虽然，现在写的也不怎么好</h2>
 <hr>
 <!-- 废纸篓，自认为对我无用的文章 -->
-<!--<h3 id="#trash">{{ site.locals.trash }}</h3>-->
+<h3 id="#trash">{{ site.locals.trash }}</h3>
 <ul>
     {% for post in site.posts %}
     {% if post.category contains "trash" %}
