--- a/pages/travel.html
+++ b/pages/travel.html
@@ -3,10 +3,12 @@ layout: page_title
 title: <i class="fa fa-archive fa-lg"></i>
 titlename: 摄影
 comments: false
+description: 环游世界是我的梦想
 ---
 
 <!-- 旅行下分：生活照片，旅行照片，旅行游记，-->
-
+<h2>环游世界是我的梦想</h2>
+<hr>
 <h3 id="#travelphoto">{{ site.locals.travelphoto }}</h3>
 <ul>
     {% for post in site.posts %}
