add programmer advantage;

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: page_title
 title: <i class="fa fa-home fa-lg"></i>
 titlename: 首页
-description: 研究互联网开发技术，记录分享个人成长所得，投机悟道提升思想境界
+description: 研究互联网开发技术，记录分享成长所得，投机悟道提升思想境界
 ---
 
 <div>
