--- a/pages/growing.html
+++ b/pages/growing.html
@@ -6,6 +6,19 @@ comments: false
 ---
 
 <!-- 成长 -->
+<h3 id="#learn">学习理论与方法</h3>
+<ul>
+    {% for post in site.posts %}
+    {% if post.category contains "learn" %}
+    <li>
+        <h4>
+            <a class="pjaxlink" href="{{ post.url }}">{{ post.title }}</a>
+        </h4>
+    </li>
+    {% endif %}
+    {% endfor %}
+</ul>
+
 <h3 id="#quality">提升基本素质</h3>
 <ul>
     {% for post in site.posts %}
