optimize website structure;

--- a/pages/about.html
+++ b/pages/about.html
@@ -1,4 +1,5 @@
 ---
+permalink: /about.html
 layout: page_title
 title: <i class="fa fa-user fa-lg"></i>
 titlename: 关于
@@ -26,7 +27,7 @@ description: 关于宋鑫的其人其事
   <ul>
     <li><a href="https://github.com/songxin1990/notes">笔记</a></li>
     <li><a href="https://github.com/songxin1990">开源项目</a></li>
-    <li><a href="/pages/resume.html">简历</a></li>
+    <li><a href="/resume.html">简历</a></li>
   </ul>
 
   <h3>关于本站</h3>
