--- a/pages/creation.html
+++ b/pages/creation.html
@@ -1,5 +1,6 @@
 ---
 permalink: /creation.html
+redirect_from: /pages/creation.html
 layout: page_title
 title: <i class="fa fa-archive fa-lg"></i>
 titlename: 创作
