--- a/pages/trade.html
+++ b/pages/trade.html
@@ -1,5 +1,6 @@
 ---
 permalink: /trade.html
+redirect_from: /pages/trade.html
 layout: page_title
 title: <i class="fa fa-archive fa-lg"></i>
 titlename: 交易
