--- a/pages/about.html
+++ b/pages/about.html
@@ -1,5 +1,6 @@
 ---
 permalink: /about.html
+redirect_from: /pages/about.html
 layout: page_title
 title: <i class="fa fa-user fa-lg"></i>
 titlename: 关于
