--- a/pages/archive.html
+++ b/pages/archive.html
@@ -1,5 +1,6 @@
 ---
 permalink: /archive.html
+redirect_from: /pages/archive.html
 layout: page_title
 title: <i class="fa fa-archive fa-lg"></i>
 titlename: 归档
