--- a/pages/growing.html
+++ b/pages/growing.html
@@ -1,5 +1,6 @@
 ---
 permalink: /growing.html
+redirect_from: /pages/growing.html
 layout: page_title
 title: <i class="fa fa-archive fa-lg"></i>
 titlename: 精华
