--- a/pages/life.html
+++ b/pages/life.html
@@ -1,5 +1,6 @@
 ---
 permalink: /life.html
+redirect_from: /pages/life.html
 layout: page_title
 title: <i class="fa fa-archive fa-lg"></i>
 titlename: 生活
