--- a/pages/tech.html
+++ b/pages/tech.html
@@ -1,5 +1,6 @@
 ---
 permalink: /tech.html
+redirect_from: /pages/technology.html
 layout: page_title
 title: <i class="fa fa-archive fa-lg"></i>
 titlename: 技术
