--- a/pages/travel.html
+++ b/pages/travel.html
@@ -1,5 +1,6 @@
 ---
 permalink: /travel.html
+redirect_from: /pages/travel.html
 layout: page_title
 title: <i class="fa fa-archive fa-lg"></i>
 titlename: 摄影
