rm pages redirect

--- a/pages/photography.html
+++ b/pages/photography.html
@@ -1,5 +1,5 @@
 ---
-permalink: /photography
+permalink: /photography.html
 layout: page_title
 title: <i class="fa fa-archive fa-lg"></i>
 titlename: 大数据
