--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 ---
-layout: page_title
+layout: page
 title: <i class="fa fa-home fa-lg"></i>
 titlename: 首页
-description: 研究互联网开发技术，记录分享成长所得，投机悟道提升思想境界
+description: 编程，写作，思考，实践，得道
 ---
 
 <div>
-  <h1 style="text-align:center">Live Once,Once Forever</h1>
+  <h2 style="text-align:center">编程，写作，思考，实践，得道</h2>
 
   <br>
   <p style="font-size:18px">你好，陌生人，欢迎来到我的世界 : )<br>
