--- a/pages/about.html
+++ b/pages/about.html
@@ -1,6 +1,6 @@
 ---
 permalink: /about.html
-layout: page_title
+layout: page
 title: <i class="fa fa-user fa-lg"></i>
 titlename: 关于
 description: 关于宋鑫的其人其事
