--- a/pages/growing.html
+++ b/pages/growing.html
@@ -1,6 +1,6 @@
 ---
 permalink: /growing.html
-layout: page_title
+layout: page
 title: <i class="fa fa-archive fa-lg"></i>
 titlename: 精华
 comments: false
