--- a/pages/life.html
+++ b/pages/life.html
@@ -1,6 +1,6 @@
 ---
 permalink: /life.html
-layout: page_title
+layout: page
 title: <i class="fa fa-archive fa-lg"></i>
 titlename: 生活
 comments: false
