--- a/pages/note.html
+++ b/pages/note.html
@@ -1,6 +1,6 @@
 ---
 permalink: /note.html
-layout: page_title
+layout: page
 title: <i class="fa fa-archive fa-lg"></i>
 titlename: 读书笔记
 comments: false
