--- a/pages/photography.html
+++ b/pages/photography.html
@@ -1,6 +1,6 @@
 ---
 permalink: /photography.html
-layout: page_title
+layout: page
 title: <i class="fa fa-archive fa-lg"></i>
 titlename: 大数据
 comments: false
