--- a/pages/search.html
+++ b/pages/search.html
@@ -1,6 +1,6 @@
 ---
 permalink: /search.html
-layout: page_title
+layout: page
 title: <i class="fa fa-user fa-lg"></i>
 titlename: 宋鑫的官网站内搜索
 description: 宋鑫的官方网站站内搜索，可用Google或者Baidu
