--- a/pages/stock.html
+++ b/pages/stock.html
@@ -1,6 +1,6 @@
 ---
 permalink: /stock.html
-layout: page_title
+layout: page
 title: <i class="fa fa-archive fa-lg"></i>
 titlename: 股票
 comments: false
