--- a/pages/travel.html
+++ b/pages/travel.html
@@ -1,14 +1,14 @@
 ---
 permalink: /travel.html
-layout: page_title
+layout: page
 title: <i class="fa fa-archive fa-lg"></i>
 titlename: 摄影
 comments: false
-description: 环游世界是我的梦想
+description: 环游世界是我的梦想之一
 ---
 
-<!-- 旅行下分：生活照片，旅行照片，旅行游记，-->
-<h2>环游世界是我的梦想</h2>
+
+<h2>环游世界是我的梦想之一</h2>
 <hr>
 <h3 id="#photography">{{ site.locals.photography }}</h3>
 <ul>
