--- a/pages/archive.html
+++ b/pages/archive.html
@@ -1,6 +1,6 @@
 ---
 permalink: /archive.html
-layout: page_title
+layout: page
 title: <i class="fa fa-archive fa-lg"></i>
 titlename: 归档
 comments: false
