--- a/pages/career.html
+++ b/pages/career.html
@@ -1,6 +1,6 @@
 ---
 permalink: /career.html
-layout: page_title
+layout: page
 title: <i class="fa fa-archive fa-lg"></i>
 titlename: 工作
 comments: false
