--- a/pages/tech.html
+++ b/pages/tech.html
@@ -1,6 +1,6 @@
 ---
 permalink: /tech.html
-layout: page_title
+layout: page
 title: <i class="fa fa-archive fa-lg"></i>
 titlename: 技术
 comments: false
