--- a/pages/tips.html
+++ b/pages/tips.html
@@ -1,6 +1,6 @@
 ---
 permalink: /tips.html
-layout: page_title
+layout: page
 title: <i class="fa fa-archive fa-lg"></i>
 titlename: 小贴士
 comments: false
