--- a/pages/trade.html
+++ b/pages/trade.html
@@ -1,6 +1,6 @@
 ---
 permalink: /trade.html
-layout: page_title
+layout: page
 title: <i class="fa fa-archive fa-lg"></i>
 titlename: 交易
 comments: false
