add summary 2017 outlook 2018;

--- a/pages/tech.html
+++ b/pages/tech.html
@@ -52,7 +52,7 @@ description: 研究互联网开发技术
     {% endfor %}
 </ul>
 
-<h3 id="#monitor">监控</h3>
+<!--<h3 id="#monitor">监控</h3>
 <ul>
     {% for post in site.posts %}
     {% if post.category contains "monitor" %}
@@ -63,7 +63,7 @@ description: 研究互联网开发技术
     </li>
     {% endif %}
     {% endfor %}
-</ul>
+</ul>-->
 
 
 <h3 id="#javacore">{{ site.locals.javacore }}</h3>
@@ -105,7 +105,7 @@ description: 研究互联网开发技术
     {% endfor %}
 </ul>
 
-<h3 id="#interview">{{ site.locals.interview }}</h3>
+<!--<h3 id="#interview">{{ site.locals.interview }}</h3>
 <ul>
     {% for post in site.posts %}
     {% if post.category contains "interview" %}
@@ -116,10 +116,10 @@ description: 研究互联网开发技术
     </li>
     {% endif %}
     {% endfor %}
-</ul>
+</ul>-->
 
 
-<h3 id="#opensource">{{ site.locals.opensource }}</h3>
+<!--<h3 id="#opensource">{{ site.locals.opensource }}</h3>
 <ul>
     {% for post in site.posts %}
     {% if post.category contains "opensource" %}
@@ -130,5 +130,5 @@ description: 研究互联网开发技术
     </li>
     {% endif %}
     {% endfor %}
-</ul>
+</ul>-->
 
