--- a/pages/programming/programdesign.html
+++ b/pages/programming/programdesign.html
@@ -1,16 +1,16 @@
 ---
-permalink: /linux.html
+permalink: /programdesign.html
 layout: page
 title: <i class="fa fa-archive fa-lg"></i>
-titlename: Linux
+titlename: 程序设计
 comments: false
 ---
 
 
-<h3 id="#linux">Linux</h3>
+<h3 id="#programdesign">程序设计</h3>
 <ul>
     {% for post in site.posts %}
-    {% if post.category contains "linux" %}
+    {% if post.category contains "programdesign" %}
     <li>
         <h4>
             <a class="pjaxlink" href="{{ post.url }}">{{ post.title }}</a>
