--- a/pages/programming/javacore.html
+++ b/pages/programming/javacore.html
@@ -1,16 +1,16 @@
 ---
-permalink: /project.html
+permalink: /javacore.html
 layout: page
 title: <i class="fa fa-archive fa-lg"></i>
-titlename: 项目总结
+titlename: java基础
 comments: false
 ---
 
 
-<h3 id="#project">项目总结</h3>
+<h3 id="#javacore">java基础</h3>
 <ul>
     {% for post in site.posts %}
-    {% if post.category contains "project" %}
+    {% if post.category contains "javacore" %}
     <li>
         <h4>
             <a class="pjaxlink" href="{{ post.url }}">{{ post.title }}</a>
