program design cate

--- a/pages/programming/programdesign.html
+++ b/pages/programming/programdesign.html
@@ -10,7 +10,7 @@ comments: false
 <h3 id="#programdesign">程序设计</h3>
 <ul>
     {% for post in site.posts %}
-    {% if post.category contains "programdesign" %}
+    {% if post.category contains "programDesign" %}
     <li>
         <h4>
             <a class="pjaxlink" href="{{ post.url }}">{{ post.title }}</a>
