--- a/pages/me.html
+++ b/pages/me.html
@@ -53,13 +53,13 @@ description: 关于宋鑫的其人其事
     <h3>联系我</h3>
     <ul class="list-inline">
         <li>
-            <a href="{{ site.author.github }}" target="_blank">
-                <i class="fa fa-github fa-lg" style="color:#16a095;"></i>
+            <a href="http://wpa.qq.com/msgrd?v=3&uin={{ site.author.qq }}&site=qq&menu=yes" target="_blank">
+                <i class="fa fa-qq fa-lg" style="color:#16a095;"></i>
             </a>
         </li>
         <li>
-            <a href="{{ site.author.linkedin }}">
-                <i class="fa fa-linkedin fa-lg" style="color:#16a095;"></i>
+            <a href="{{ site.author.github }}" target="_blank">
+                <i class="fa fa-github fa-lg" style="color:#16a095;"></i>
             </a>
         </li>
         <li>
@@ -68,6 +68,16 @@ description: 关于宋鑫的其人其事
             </a>
         </li>
         <li>
+            <a href="mailto:{{ site.author.email }}">
+                <i class="fa fa-envelope-o fa-lg" style="color:#16a095;"></i>
+            </a>
+        </li>
+        <li>
+            <a href="/atom.xml" target="_blank">
+                <i class="fa fa-rss fa-lg" style="color:#16a095;"></i>
+            </a>
+        </li>
+        <!--<li>
             <a href="{{ site.author.googleplus }}" target="_blank">
                 <i class="fa fa-google-plus fa-lg" style="color:#16a095;"></i>
             </a>
@@ -83,13 +93,18 @@ description: 关于宋鑫的其人其事
             </a>
         </li>
         <li>
-            <a href="mailto:{{ site.author.email }}">
-                <i class="fa fa-envelope-o fa-lg" style="color:#16a095;"></i>
+            <a href="{{ site.author.linkedin }}">
+                <i class="fa fa-linkedin fa-lg" style="color:#16a095;"></i>
             </a>
-        </li>
+        </li>-->
+
+    </ul>
+
+    <h3>加入组织</h3>
+    <ul class="list-inline">
         <li>
-            <a href="/atom.xml" target="_blank">
-                <i class="fa fa-rss fa-lg" style="color:#16a095;"></i>
+            <a href="//shang.qq.com/wpa/qunwpa?idkey=4f5f326ebf64403f8c03e914040fa65329040a815d653e0befa4e3603fb83913" target="_blank">
+                <img border="0" src="//pub.idqqimg.com/wpa/images/group.png" alt="Big" title="Big">
             </a>
         </li>
     </ul>
