--- a/pages/me.html
+++ b/pages/me.html
@@ -42,10 +42,10 @@ description: 关于宋鑫的其人其事
 
     <h3>关于版权</h3>
     <P>
-        本站所有文章标题无转载字样的，均原创于：<a href="http://3gods.com/">宋鑫的官方网站</a>。<br>
+        本站所有文章标题无转载字样的，均原创于：<a href="https://3gods.com/">宋鑫的官方网站</a>。<br>
         所有版权均属宋鑫个人所有。 <br>
         任何媒体、网站或个人都可以随意转载，但必须在文章顶部或底部进行如下声明： <br>
-        “本文转载自：<a href="http://3gods.com/">宋鑫的官方网站</a>，原文地址：http://3gods.com/xxx” <br>
+        “本文转载自：<a href="https://3gods.com/">宋鑫的官方网站</a>，原文地址：https://3gods.com/xxx” <br>
         违反上述声明者，本人将追究其相关法律责任。<br>
     </p>
 
