--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 layout: page
 title: <i class="fa fa-home fa-lg"></i>
 titlename: 首页
-description: 编程，写作，思考，实践，得道
+description: 编程写作,扩展思维边界;市场交易,磨炼心性智慧;思考创造,追求人生自由
 ---
 
 <div>
-  <h2 style="text-align:center">编程，写作，思考，实践，得道</h2>
+  <h2 style="text-align:center">编程,写作,市场交易,职场,教程,思考,成长,创造</h2>
 
   <br>
   <p style="font-size:18px">你好，陌生人，欢迎来到我的世界 : )<br>
