--- a/pages/growing/efficient.html
+++ b/pages/growing/efficient.html
@@ -2,7 +2,7 @@
 permalink: /efficient.html
 layout: page
 title: <i class="fa fa-archive fa-lg"></i>
-titlename: 精华
+titlename: 高效人生
 comments: false
 ---
 
