--- a/pages/growing/mind.html
+++ b/pages/growing/mind.html
@@ -2,7 +2,7 @@
 permalink: /mind.html
 layout: page
 title: <i class="fa fa-archive fa-lg"></i>
-titlename: 小贴士
+titlename: 心态
 comments: false
 ---
 
