--- a/pages/growing/method.html
+++ b/pages/growing/method.html
@@ -2,7 +2,7 @@
 permalink: /method.html
 layout: page
 title: <i class="fa fa-archive fa-lg"></i>
-titlename: 精华
+titlename: 学习理论与方法
 comments: false
 ---
 
